--- a/package.json
+++ b/package.json
@@ -6,11 +6,29 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@wdr-data/s3-env-config": "^0.0.3",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
     "serverless": "^1.32.0",
     "serverless-plugin-scripts": "^1.0.2",
-    "serverless-pseudo-parameters": "^2.2.0"
+    "serverless-pseudo-parameters": "^2.2.0",
+    "serverless-webpack": "^5.2.0",
+    "webpack": "^4.20.2"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.330.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
+    "source-map-support": "^0.5.9"
   },
   "engines": {
     "node": ">=6.10.0"
+  },
+  "scripts": {
+    "env": "ENV_BUCKET_NAME=newsforyou-bot-config-jhoeke AWS_REGION=eu-central-1 s3-env-config"
   }
 }
