--- a/serverless.yml
+++ b/serverless.yml
@@ -46,6 +46,27 @@ functions:
           path: hello
           method: get
 
+  fbVerify:
+    handler: entrypoint/fb.verify
+    events:
+      - http:
+          path: fb
+          method: get
+  fbMessage:
+    handler: entrypoint/fb.message
+    timeout: 15
+    events:
+      - http:
+          path: fb
+          method: post
+  fbAttachment:
+    handler: entrypoint/fb.attachment
+    timeout: 30
+    events:
+      - http:
+          path: attachment
+          method: post
+
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
