:wrench: Don't build grpc

--- a/serverless.yml
+++ b/serverless.yml
@@ -114,9 +114,9 @@ custom:
         - source-map-support
       forceExclude:
         - aws-sdk
-    packagerOptions:
-      scripts:
-        - npm rebuild grpc --target=6.1.0 --target_arch=x64 --target_platform=linux --target_libc=glibc
+#    packagerOptions:
+#      scripts:
+#        - npm rebuild grpc --target=6.1.0 --target_arch=x64 --target_platform=linux --target_libc=glibc
 
 plugins:
   - serverless-plugin-scripts
