--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 
 env:
   global:
-    - ENV_BUCKET_NAME=newsforyou-bot-config-jhoeke
+    - ENV_BUCKET_NAME=newsforyou-bot-config
     - AWS_REGION=eu-central-1
 
 cache: yarn
@@ -18,6 +18,6 @@ script:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: export SLS_STAGE=jhoeke && yarn serverless deploy
+    script: export SLS_STAGE=staging && yarn serverless deploy
     on:
       branch: master
