--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "moment-timezone": "^0.5.21",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "source-map-support": "^0.5.9"
+    "source-map-support": "^0.5.9",
+    "universal-analytics": "^0.4.20"
   },
   "engines": {
     "node": ">=8.10.0"
