--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "devDependencies": {
     "@babel/core": "^7.1.2",
+    "@babel/node": "^7.2.0",
     "@babel/preset-env": "^7.1.0",
     "@wdr-data/s3-env-config": "^0.0.3",
     "babel-core": "^6.26.3",
