--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "node": ">=8.10.0"
   },
   "scripts": {
-    "env": "ENV_BUCKET_NAME=newsforyou-bot-config AWS_REGION=eu-central-1 s3-env-config"
+    "env": "ENV_BUCKET_NAME=newsforyou-bot-config AWS_REGION=eu-central-1 s3-env-config",
+    "set-menu": "babel-node setMenu.js",
+    "broadcast-video": "babel-node sendVideoBroadcast.js"
   }
 }
