--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ deploy:
   script: export SLS_STAGE=staging && yarn serverless deploy
   on:
     branch: master
+- provider: script
+  skip_cleanup: true
+  script: export SLS_STAGE=production && yarn serverless deploy
+  on:
+    branch: production
 notifications:
   slack:
     rooms:
