:wrench: Set timeout to 30 seconds for analytics

--- a/serverless.yml
+++ b/serverless.yml
@@ -85,6 +85,7 @@ functions:
     timeout: 30
   fbPushFinish:
     handler: entrypoint/fbPush.finish
+    timeout: 30
   fbPushProxy:
     handler: entrypoint/fbPush.proxy
     environment:
