--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "serverless": "^1.32.0",
     "serverless-plugin-scripts": "^1.0.2",
     "serverless-pseudo-parameters": "^2.2.0",
+    "serverless-sentry": "^1.2.0",
     "serverless-step-functions": "^1.13.0",
     "serverless-webpack": "^5.2.0",
     "webpack": "^4.20.2"
@@ -23,8 +24,10 @@
     "aws-sdk": "^2.330.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "raven": "^2.6.4",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "serverless-sentry-lib": "^1.1.2",
     "source-map-support": "^0.5.9",
     "universal-analytics": "^0.4.20"
   },
