--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "scripts": {
     "env": "ENV_BUCKET_NAME=newsforyou-bot-config AWS_REGION=eu-central-1 s3-env-config",
     "set-menu": "babel-node setMenu.js",
-    "broadcast-video": "babel-node sendVideoBroadcast.js"
+    "broadcast-video": "babel-node sendVideoBroadcast.js",
+    "upload-attachment": "babel-node uploadAttachment.js"
   }
 }
