--- a/serverless.yml
+++ b/serverless.yml
@@ -41,6 +41,18 @@ provider:
       Action:
         - states:StartExecution
       Resource: "arn:aws:states:#{AWS::Region}:#{AWS::AccountId}:stateMachine:${self:service}-${self:provider.stage}-*"
+    - Effect: Allow
+      Action:
+        - translate:TranslateText
+      Resource: "*"
+    - Effect: Allow
+      Action:
+        - comprehend:DetectDominantLanguage
+      Resource: "*"
+    - Effect: Allow
+      Action:
+        - lex:PostText
+      Resource: "arn:aws:lex:eu-west-1:#{AWS::AccountId}:bot:INFOSforyou:*"
 
 functions:
   hello:
