--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "aws-sdk": "^2.330.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "node-emoji": "^1.10.0",
     "raven": "^2.6.4",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
