⬆️ Update to node 12

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,12 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "node": "8.10"
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "12"
+        }
       }
-    }]
+    ]
   ]
 }
